<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_item_container"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/product_imageview"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:src="@drawable/image_placeholder"
            android:contentDescription="@string/image_description_placeholder" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/product_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/product_name_placeholder"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/like_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_name_textview"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <Button
                    android:id="@+id/unlike_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:visibility="invisible"
                    app:icon="@drawable/like_button"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="20sp"
                    app:iconTint="@color/red_100" />

                <Button
                    android:id="@+id/like_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    app:icon="@drawable/outline_favorite_border_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="20sp"
                    app:iconTint="@color/gray_300" />
            </RelativeLayout>

            <TextView
                android:id="@+id/like_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_below="@+id/product_name_textview"
                android:layout_toStartOf="@+id/like_button_group"
                android:text="@string/like_count_placeholder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:text="@string/price_placeholder"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/stock_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/like_count_textview"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/in_stock_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_stock"
                    android:textColor="@color/gray_100"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/low_stock_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_stock"
                    android:textColor="@color/orange_100"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/no_stock_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_stock"
                    android:textColor="@color/red_100"
                    android:textSize="16sp"
                    android:visibility="invisible" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

