<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardElevation="8dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp"
    android:id="@+id/category_card_view">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/category_imageview"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/image_description_placeholder" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/category_title_textview"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_placeholder"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/forward_arrow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:backgroundTint="@color/yellow_main"
                android:contentDescription="@string/category_arrow_description"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

