<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    android:id="@+id/cart_item_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cart_product_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/cart_product_checkbox"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/cart_product_imageview"
                    android:layout_margin="5dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/image_placeholder"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/image_description_placeholder" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/cart_product_name_textview"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/product_name_placeholder"/>

                    <TextView
                        android:id="@+id/cart_product_price_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/price_placeholder"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />

                    <Button
                        android:id="@+id/delete_button"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="-8dp"
                        android:layout_marginEnd="-8dp"
                        app:icon="@drawable/ic_delete"
                        app:iconGravity="textEnd"
                        app:iconPadding="0dp"
                        app:iconSize="20sp"
                        app:iconTint="@android:color/black" />

                    <Button
                        android:id="@+id/decrease_amount_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="40dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        app:icon="@drawable/remove"
                        app:iconSize="20sp"
                        app:iconPadding="0dp"
                        app:iconGravity="textStart"
                        app:iconTint="@android:color/black" />

                    <TextView
                        android:id="@+id/cart_product_amount_textview"
                        android:layout_width="30dp"
                        android:layout_height="48dp"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/decrease_amount_button"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="@string/amount_placeholder"/>

                    <Button
                        android:id="@+id/increase_amount_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="40dp"
                        android:layout_height="48dp"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/cart_product_amount_textview"
                        app:icon="@drawable/add"
                        app:iconPadding="0dp"
                        app:iconGravity="textStart"
                        app:iconSize="20sp"
                        app:iconTint="@android:color/black" />

                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>