<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_main"
        android:id="@+id/sign_up_page"
        android:visibility="gone"
        tools:context=".activities.MainActivity">
        <TextView
            android:id="@+id/register_app_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/app_title"
            android:textColor="@color/red_main"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <EditText
            android:id="@+id/register_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/login_register_text_box"
            android:drawableStart="@drawable/login_person"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="@string/name"
            android:padding="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_app_title_textView"
            app:layout_constraintWidth_percent="0.8"
            android:autofillHints="name"
            android:inputType="text" />

        <EditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_register_text_box"
            android:drawableStart="@drawable/login_password"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username_edit_text"
            app:layout_constraintWidth_percent="0.8"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_register_text_box"
            android:drawableStart="@drawable/ic_baseline_confirmation_number_24"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text"
            app:layout_constraintWidth_percent="0.8"
            android:autofillHints="confirm your password" />

        <Button
            android:id="@+id/register_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_main"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="0.423"
            app:layout_constraintWidth_percent="0.8">

        </Button>

        <TextView
            android:id="@+id/register_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/login_in"
            android:textColor="@color/orange_main"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_sign_up_button"
            app:layout_constraintWidth_percent="0.8"
            app:strokeWidth="1dp"
            android:textAlignment="textEnd">
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_main"
        tools:context=".activities.MainActivity"
        android:visibility="visible">
        <TextView
            android:id="@+id/login_app_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/app_title"
            android:textColor="@color/red_main"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/login_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:autofillHints="name"
            android:background="@drawable/login_register_text_box"
            android:drawableStart="@drawable/login_person"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_app_title_textView"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="password"
            android:background="@drawable/login_register_text_box"
            android:drawableStart="@drawable/login_password"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username_edit_text"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_main"
            android:padding="8dp"
            android:text="@string/login_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/login_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/sign_up"
            android:textColor="@color/orange_main"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login_button"
            app:layout_constraintVertical_bias="0.324"
            app:layout_constraintWidth_percent="0.8"
            app:strokeWidth="1dp"
            android:textAlignment="textEnd" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

