<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestion_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/top_pick_product"
                            android:orientation="vertical">
                            <ProgressBar
                                android:id="@+id/cart_product_progressbar"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center"
                                android:layout_margin="64dp"
                                android:indeterminateTint="@color/orange_main"
                                />
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/cart_product_recyclerview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:paddingBottom="60dp"/>
                        </LinearLayout>


                    </LinearLayout>

                    <com.google.android.material.bottomnavigation.BottomNavigationView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/select_all_checkbox"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:onClick="onSelectAll"/>
                            <TextView
                                android:layout_toEndOf="@+id/select_all_checkbox"
                                android:layout_centerVertical="true"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cart_select_all"
                                tools:ignore="RelativeOverlap" />
                            <Button
                                android:id="@+id/checkout_button"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cart_checkout"
                                android:backgroundTint="@color/orange_main"
                                android:onClick="onCheckOut"/>
                            <TextView
                                android:id="@+id/total_price_textview"
                                android:layout_toStartOf="@+id/checkout_button"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="10dp"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price_tag"
                                tools:ignore="RelativeOverlap" />
                        </RelativeLayout>

                    </com.google.android.material.bottomnavigation.BottomNavigationView>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/app_drawer_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_head_layout"
        app:menu="@menu/drawer_navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>